v0.053 : shift schedule UI improvement and some bug fixed

--- a/public/css/baseStyle.css
+++ b/public/css/baseStyle.css
@@ -240,6 +240,7 @@ body {
         padding:18px;
         color:white;
         margin:0px;
+        font-weight:bold;
 }
 
 #container .body-hold {
